--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 <h1>Biologia</h1>
 <div class="PRIMEIROPARAGRAFO">
 <h3>Sensibilidade</h3>
-<p><i><b>TEXTO</b></i></p>
+<p><i><b>Sensibilidade: A Essência do Sentir e Compreender
+</b></i></p>
 <ul id="lista02">
 <li>ITEM 01</li> <li>ITEM 02</li> <li>ITEM 03</li>
 </ul>
