--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 <p><i><b>Sensibilidade: A Essência do Sentir e Compreender
 </b></i></p>
 <ul id="lista02">
-<li>ITEM 01</li> <li>ITEM 02</li> <li>ITEM 03</li>
+<li>Sensibilidade é a capacidade de se conectar profundamente com o mundo, consigo mesmo e com o outro. É um estado de percepção que vai além do olhar superficial, permitindo enxergar nuances, sentimentos e significados que muitas vezes passam despercebidos. É por meio da sensibilidade que nos tornamos verdadeiramente humanos, pois ela nos abre para a empatia, a compaixão e a valorização daquilo que é intangível.
+</li> <li>ITEM 02</li> <li>ITEM 03</li>
 </ul>
 </div>
 <h1>***</h1>
