--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
 </b></i></p>
 <ul id="lista02">
 <li>Sensibilidade é a capacidade de se conectar profundamente com o mundo, consigo mesmo e com o outro. É um estado de percepção que vai além do olhar superficial, permitindo enxergar nuances, sentimentos e significados que muitas vezes passam despercebidos. É por meio da sensibilidade que nos tornamos verdadeiramente humanos, pois ela nos abre para a empatia, a compaixão e a valorização daquilo que é intangível.
-</li> <li>ITEM 02</li> <li>ITEM 03</li>
+</li> <li>Ser sensível é estar atento aos detalhes que moldam a realidade. É perceber como um tom de voz pode revelar tristeza, como um gesto tímido pode esconder ansiedade ou como o silêncio pode ser tão eloquente quanto as palavras. Essa habilidade de captar o que não é dito explicitamente nos aproxima das pessoas e nos ajuda a compreender suas dores, suas alegrias e suas complexidades.
+
+No entanto, a sensibilidade não se limita às relações humanas; ela também se manifesta na maneira como interagimos com o mundo ao nosso redor. Um coração sensível é capaz de se encantar com a delicadeza de uma flor, com a melodia de uma canção ou com a intensidade de um pôr do sol. É através desse olhar atento que encontramos beleza nas coisas mais simples e aprendemos a valorizar o momento pres 
+</li> <li>Por outro lado, a sensibilidade também traz desafios. Quem sente intensamente muitas vezes carrega o peso das dores do mundo. A indiferença, a injustiça e a crueldade podem ferir profundamente quem é sensível, pois essas pessoas não conseguem ignorar o sofrimento alheio. Essa abertura emocional, embora seja uma força, também exige maturidade para lidar com as emoções e discernir quando agir, quando acolher e quando proteger a si mesmo.
+
+Num mundo marcado pela correria, pela competitividade e pela superficialidade, a sensibilidade é frequentemente vista como uma fragilidade. Muitos a consideram uma barreira para o sucesso em uma sociedade que valoriza a razão acima de tudo. No entanto, é justamente o contrário: a sensibilidade é uma qualidade indispensável para quem deseja construir relações verdadeiras e contribuir para um mundo mais justo e solidário.
+
+Cultivar a sensibilidade é, portanto, um ato de resistência e coragem. É não se deixar endurecer pelas adversidades, é insistir em enxergar a humanidade no outro, mesmo quando ela parece ausente. É manter viva a capacidade de se emocionar, de sonhar e de se conectar. Sensibilidade é a força de quem ainda acredita que sentir é o que nos torna verdadeiramente vivos.</li>
 </ul>
 </div>
 <h1>***</h1>
